# miron

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
src/apis/: __init__.py  tasks.py
src/custom_types/: __init__.py  general.py  tasks_api.py
src/miron/: main.py
src/miron/extensions/commands/: ping.py  tasks.py
src/miron/extensions/events/: on_connect.py  on_ready.py
src/utils/: __init__.py  cogs.py  embed_helper.py  env.py  logger.py
